# msgnr

./: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  sqlc.yaml
api/proto/: AGENTS.md  buf.gen.yaml  packets.proto
cmd/server/: main.go
docs/plans/: pwa_adr.md  pwa_plan.md
etc/: install_livekit.sh  livekit.yaml  minio_compose.yaml  setup.sh
internal/: AGENTS.md
internal/admin/: handler.go  service.go  service_integration_test.go
internal/auth/: AGENTS.md  avatar_processing.go  avatar_processing_test.go  handler.go  repo.go  service.go  service_test.go  token_manager.go  token_manager_test.go  user_repo.go
internal/bootstrap/: AGENTS.md  service.go  service_integration_test.go  service_test.go
internal/calls/: handler.go  service.go  service_integration_test.go
internal/chat/: AGENTS.md  handler.go  handler_reaction_users_integration_test.go  handler_test.go  reaction_users_integration_test.go  service.go  service_integration_test.go
internal/config/: config.go  config_test.go
internal/database/: database.go
internal/events/: AGENTS.md  bus.go  bus_test.go  codec.go  codec_test.go  integration_test.go  listener.go  listener_parse_test.go  store.go  types.go  types_test.go
internal/httputil/: http.go
migrations/: schema.sql
web/: components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  (+4 more)
web/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+142 files in other folders)
