[package]
name = "msgnr-desktop"
version = "0.3.0"
description = "Msgnr desktop shell"
authors = ["Msgnr Team"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol", "macos-private-api"]
custom-protocol = ["tauri/custom-protocol"]
macos-private-api = ["tauri/macos-private-api"]
